k8maifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: krakend-svc
  labels:
    name: krakend-svc
spec:
  type: ClusterIP
  selector:
    name: krakend-pod
    app: krakend
    tier: app
  ports:
  - protocol: TCP
    targetPort: 8080
    port: 80
