k8maifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: krakend-ingress
  labels:
    name: krakend-ingress
  annotations:
    kubernetes.io/ingress.class: public
    kubernetes.io/tls-acme: "true"

spec:
  rules:
  - http:
      paths:
      - path: /custom/path
        pathType: Prefix
        backend:
          service:
            name: krakend-svc
            port:
              number: 8080
